@@ -95,7 +95,7 @@
 #define STDC_HEADERS 1
 
 /* Most recent revision number in the version control system */
-#define VCS_REVISION "71"
+#define VCS_REVISION "72"
 
 /* Version number of package */
 #define VERSION "2.4"
